# osplanner

./: .gitignore  License  MANIFEST.in  README.md  Readme.rst  manage.py  playground.py  requirements.txt  setup.cfg  setup.py
osplanner/: settings.py  urls.py  wsgi.py
osplanner/osplanner/: urls.py  wsgi.py
osplanner/spaceplanner/: admin.py  models.py
osplanner/spaceplanner/app_logic/: assigner.py
osplanner/spaceplanner/migrations/: 0001_initial.py  0002_properties.py  0003_preference_user.py  0004_workweek.py  0005_auto_20200713_1322.py
osplanner/spaceplanner/tests/: test_database.py
spaceplanner/: admin.py  apps.py  forms.py  models.py  permissions.py  serializer.py  serializers.py  tables.py  urls.py  views.py
spaceplanner/app_logic/: access.py  assigner.py  calendar_functions.py  views_processing.py
spaceplanner/migrations/: 0001_initial.py  0002_auto_20200716_1114.py  0002_auto_20200717_1130.py  0002_auto_20200722_1113.py  0002_auto_20200724_1236.py  0003_auto_20200716_1136.py  0003_auto_20200806_0849.py  0003_employeepreferences_favourite_workspace.py  0004_auto_20200716_1152.py  0004_auto_20200806_1003.py  0004_userweek.py  0005_auto_20200813_1108.py  0005_userweek_monday_date.py  0006_auto_20200813_1111.py  0007_auto_20200814_1219.py  0008_auto_20200818_1414.py  0009_auto_20200818_1418.py
spaceplanner/static/css/: styles.css
spaceplanner/templates/: base_generic.html
spaceplanner/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  (+5 more)
spaceplanner/tests/: test_assignment.py  test_database.py
(+12 files in other folders)
