[metadata]
name = spaceplanner
version = 0.1
description = App to manage matching employees to workstations
long_description = file:README.rst
url = git-tesseract.sekurit.saint-gobain.com/P1852053/osplanner
author = Przemysław Nocoń
author_email = Przemyslaw.Nocon@saint-gobain.com
license = # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2  
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    
[options]
include_package_data = true
packages = find:
